# tree-sitter-zeek

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: check.yml  publish.yaml  test.yaml  update.yml
bindings/c/: tree-sitter-zeek.h  tree-sitter-zeek.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_zeek/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterZeekTests/: TreeSitterZeekTests.swift
corpus/: test
queries/: highlights.scm
src/: grammar.json  node-types.json
test/: Makefile  parse-zeek-tree.sh
test/corpus/: expressions  newline  preproc  statements  types
