[package]
name = "tree-sitter-zeek"
description = "Zeek grammar for tree-sitter"
version = "0.2.8"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "zeek"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-zeek"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0.87"

[dev-dependencies]
tree-sitter = "0.23.0"
