[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-zeek"
description = "Zeek grammar for tree-sitter"
version = "0.2.5"
keywords = ["incremental", "parsing", "tree-sitter", "zeek"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.10"
license.text = "BSD-3-Clause"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-zeek"

[project.optional-dependencies]
core = ["tree-sitter~=0.23"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
